# lgsvl-test-infra

./: .aderc  .aderc-gpu  .aderc-lgsvl  .gitignore  LICENSE  Makefile  README.md  packages_for_test.txt
docs/: README.md
src/common/iac_common/: CMakeLists.txt  package.xml  setup.cfg
src/common/iac_common/iac_common/: __init__.py  launch.py
src/common/iac_common/include/iac_common/: pubsub.hpp  race_control.hpp
src/common/iac_common/include/iac_common/detail/: bitmask_operators.hpp
src/common/iac_common/src/: flags.cpp
src/common/iac_msgs/: CMakeLists.txt  package.xml
src/common/iac_msgs/msg/: EnginePressuresReport.msg  EngineReport.msg  FaultReport.msg  MiscReport.msg  RaceControlHeader.msg  SteeringExtendedReport.msg  TirePressureReport.msg  TireReport.msg  TireTempReport.msg  TireTempReports.msg  VehicleBitfields.msg  VehicleCommand.msg  VehicleStatus.msg  VehicleTiming.msg  WheelPotentiometerReport.msg  WheelStrainGaugeReport.msg
src/urdf/av21_description/: CMakeLists.txt  package.xml
src/urdf/av21_description/launch/: av21_description.launch.py
src/urdf/av21_description/urdf/: av21.urdf
test/lgsvl_mocks/: CMakeLists.txt  package.xml  start_car.sh
test/lgsvl_mocks/include/: lgsvl_mocks.hpp
test/lgsvl_mocks/launch/: lgsvl_mocks.launch.py
test/lgsvl_mocks/src/: lgsvl_mocks.cpp
test/svl_tests/: package.xml  setup.cfg  setup.py
test/svl_tests/launch/: lgsvl_interface.launch.py  svl.launch.py
test/svl_tests/param/: lgsvl_interface.param.yaml
test/svl_tests/svl_tests/: 04_ims_demo.py  svl_tests.py
tools/examples/ade_image/: Dockerfile  apt-packages  entrypoint
tools/examples/gitlab_ci/: .gitlab-ci-autoware-tag.yml  .gitlab-ci-autoware.yml  .gitlab-ci-lgsvl-test-infra.yml
tools/scripts/: kill_ros2_nodes.sh  source_all.sh
